Tweaked the login page so its a little better

--- a/components/layout.templ
+++ b/components/layout.templ
@@ -10,8 +10,8 @@ templ header(title string) {
 
 templ Layout(contents templ.Component, title string) {
     @header(title)
-    <body class="flex flex-col h-full bg-slate-900">
-        <main class="flex-1 container">
+    <body class="bg-[#94A378]">
+        <main>
             @contents
         </main>
     </body>
