--- a/components/login.templ
+++ b/components/login.templ
@@ -1,5 +1,23 @@
 package components
 
 templ Login() {
-    <h1>GoNances</h1>
+    <div class="flex flex-col justify-center gap-x-5 gap-y-10 h-screen">
+        <h1 class="self-center font-bold font-mono text-xl">GoNances</h1>
+        <form class="self-center" action="/login" method="POST">
+            <div class="self-center font-mono">
+                    <label for="username">Username: </label>
+                    <input class="bg-white" type="text" id="username" placeholder="Username"/>
+            </div>
+            <br>
+            <div class="self-center font-mono">
+                    <label for="password">Password: </label>
+                    <input class="bg-white" type="password" id="password" placeholder="Password"/>
+            </div>
+            <br>
+            <div class="flex justify-center gap-x-5 font-mono">
+                <button class="w-24 text-white rounded-sm bg-[2D3C59]"type="submit">Login</button>
+                <button class="w-24 text-white rounded-sm bg-[2D3C59]" type="submit" formaction="/signup" formmethod="GET">Sign Up</button>
+            </div>
+        </form>
+    </div>
 }
