--- a/components/layout.templ
+++ b/components/layout.templ
@@ -5,14 +5,15 @@ templ header(title string) {
             <meta charset="UTF-8"/>
             <meta name="viewport" content="width=device-width, initial-scale=1"/>
             <link href="/static/css/styles.css" rel="stylesheet"/>
+            <script src="htmx.min.js"></script>
     </head>
 }
 
-templ Layout(contents templ.Component, title string) {
+templ Layout(title string) {
     @header(title)
     <body class="bg-[#94A378]">
         <main>
-            @contents
+            { children...}
         </main>
     </body>
 }
