--- a/components/signup.templ
+++ b/components/signup.templ
@@ -1,7 +1,7 @@
 package components
 
 templ SignUp(params SignUpParams, errors map[string]string) {
-    @Layout("Sign Up"){
+    @LayoutWelcome(){
         <div class="flex flex-col justify-center gap-x-5 gap-y-10 h-screen">
             <h1 class="self-center font-bold font-mono text-xl">Sign Up</h1>
             @SignUpForm(params, errors)
