--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10,13 +10,10 @@
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
-    --text-xl: 1.25rem;
-    --text-xl--line-height: calc(1.75 / 1.25);
     --text-5xl: 3rem;
     --text-5xl--line-height: 1;
     --font-weight-bold: 700;
     --font-weight-extrabold: 800;
-    --radius-sm: 0.25rem;
     --radius-md: 0.375rem;
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
@@ -171,6 +168,9 @@
   }
 }
 @layer utilities {
+  .absolute {
+    position: absolute;
+  }
   .z-50 {
     z-index: 50;
   }
@@ -185,6 +185,9 @@
   }
   .h-screen {
     height: 100vh;
+  }
+  .w-1\/4 {
+    width: calc(1 / 4 * 100%);
   }
   .w-24 {
     width: calc(var(--spacing) * 24);
@@ -207,23 +210,11 @@
   .justify-center {
     justify-content: center;
   }
-  .gap-x-5 {
-    column-gap: calc(var(--spacing) * 5);
-  }
   .gap-y-5 {
     row-gap: calc(var(--spacing) * 5);
   }
-  .gap-y-10 {
-    row-gap: calc(var(--spacing) * 10);
-  }
-  .self-center {
-    align-self: center;
-  }
   .rounded-md {
     border-radius: var(--radius-md);
-  }
-  .rounded-sm {
-    border-radius: var(--radius-sm);
   }
   .border-2 {
     border-style: var(--tw-border-style);
@@ -232,11 +223,14 @@
   .border-black {
     border-color: var(--color-black);
   }
-  .bg-\[\#94A378\] {
-    background-color: #94A378;
+  .bg-\[\#222831\] {
+    background-color: #222831;
   }
-  .bg-\[2D3C59\] {
-    background-color: 2D3C59;
+  .bg-\[\#EEEEEE\] {
+    background-color: #EEEEEE;
+  }
+  .bg-\[\#FFD369\] {
+    background-color: #FFD369;
   }
   .bg-white {
     background-color: var(--color-white);
@@ -248,10 +242,6 @@
     font-size: var(--text-5xl);
     line-height: var(--tw-leading, var(--text-5xl--line-height));
   }
-  .text-xl {
-    font-size: var(--text-xl);
-    line-height: var(--tw-leading, var(--text-xl--line-height));
-  }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
@@ -260,8 +250,11 @@
     --tw-font-weight: var(--font-weight-extrabold);
     font-weight: var(--font-weight-extrabold);
   }
-  .text-white {
-    color: var(--color-white);
+  .text-\[\#222831\] {
+    color: #222831;
+  }
+  .text-\[\#EEEEEE\] {
+    color: #EEEEEE;
   }
   .shadow-xl\/30 {
     --tw-shadow-alpha: 30%;
